--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
-    "cucumber": "^7.0.0-rc.0",
-    "cypress": "^9.2.1",
+    "cucumber": "6.0.7",
+    "cypress": "^9.7.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "dayjs": "^1.10.7"
   },
